# bazel_debian_rootfs

./: MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: tag-and-release.yml
image/: BUILD.bazel  README.md  rootfs_definition.yaml  rules.bzl
integration/: BUILD.bazel  MODULE.bazel
