# LICENSE sha256: c71d239df91726fc519c6eb72d318ec65820627232b2f796219e87dcf35d0ab4
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load(":rules.bzl", "rootfs")
load("@rules_zstd//zstd/decompress:defs.bzl", "zstd_decompress")


zstd_decompress(
    name = "nvc_deb_decompress",
    src = "@nvc_deb//:data.tar.zst",
)

oci_image(
    name = "image",
    architecture = "amd64",
    os = "linux",
    tars = [
        "@rootfs//:flat",
        ":nvc_deb_decompress",
    ],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["blah"],
)

filegroup(
    name = "image.tar",
    srcs = [":load"],
    output_group = "tarball",
)

rootfs(
    name = "rootfs",
    image_tar = ":image.tar",
    visibility = [ "//bin:__subpackages__"],
    # Links that haven't been installed, removing them otherwise bazel objects.
    to_remove = [
        "etc/rmt",
        "usr/share/doc/perl/Changes.gz",
        "usr/share/doc/libxml2/NEWS.gz",
        "usr/share/man/man1/cpp-13.1",
        "usr/share/man/man1/cpp.1.gz",
    ],
    # Files to add to xrootfs. The created files will be empty.
    markers = [
        "HERE",
    ]
)
